# elysabettian

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  Makefile  README.md  build.sh  conanfile.txt  cs-elysabettian.sln
.github/workflows/: cmake-multi-platform.yml
Elysabettian/: cely  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  object.h  scanner.c  table.c  table.h  test.ely  vm.c  vm.h
Elysabettian.xcodeproj/: project.pbxproj
Elysabettian.xcodeproj/xcuserdata/simone.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Elysabettian.xcodeproj/xcuserdata/simone.xcuserdatad/xcschemes/: xcschememanagement.plist
Infrastructure/Language/: Token.cs  TokenScanner.cs
examples/: line.ely  vector.ely
scripts/: setup_unix.sh  setup_windows.bat
src/: .editorconfig  Array.cpp  Common.hpp  Compiler.cpp  Compiler.hpp  Library.hpp  Main.cpp  Opcodes.hpp  Tokenizer.cpp  Tokenizer.hpp  Value.cpp  Value.hpp  VirtualMachine.cpp  VirtualMachine.hpp  chunk.c  chunk.h  common.hpp  compiler.cpp  compiler.hpp  core_vm.cpp  library.cpp  library.hpp  main.c  main.cpp  main.rs  memory.c  memory.h  object.c  opcodes.hpp  scanner.h  tokenizer.cpp  tokenizer.hpp  value.c  value.cpp  value.h  value.hpp  virtual_machine.cpp  virtual_machine.hpp  vm.c
src/Application/: Common.hpp  Main.cpp
src/ExecEnv/: CommonLibrary.hpp  Compiler.cpp  Compiler.hpp  IoFile.cpp  IoFile.hpp  Library.cpp  Math.cpp  Math.hpp  Opcodes.hpp  String.cpp  String.hpp  Value.cpp  Value.hpp  VirtualMachine.cpp  VirtualMachine.hpp
src/Lexer/: Tokenizer.hpp
src/Libraries/: Array.cpp  File.cpp  Library.cpp  Library.hpp  Math.cpp  StdIO.cpp  array.cpp  stdio.cpp
src/include/: common.h
src/include/language/: tokenizer.h
src/include/provider/: cstdio.h  earray.h  elibrary.h  emath.h  estdio.h  library.h
src/include/runtime/: compiler.h  core_vm.h  opcodes.h  value.h
src/language/: token.rs  tokenizer.rs
src/stdlib/: array.cpp  cstdio.cpp  earray.cpp  emath.cpp  estdio.cpp  math.cpp  stdio.cpp
test/: test.ely
